--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,13 @@ img {
     height: 100%;
 }
 
+h3 {
+    color: rgb(118,186,141);
+    font-size: x-large;
+    text-align: left;
+}
+
+p {
+    text-align: left;
+    color: rgb(136,136,136)
+}
