--- a/css/style.css
+++ b/css/style.css
@@ -28,3 +28,14 @@ p {
     text-align: left;
     color: rgb(136,136,136)
 }
+
+@media only screen and (max-width: 650px){
+    .box {
+        display: inline-block;
+    }
+
+    img {
+        width: auto;
+        height: 100px;
+    }
+}
