--- a/css/style3.css
+++ b/css/style3.css
@@ -46,6 +46,7 @@ body {
   .intro {
       line-height: 1.4;
       font-size: 15px;
+      color: #BEBEBE;
   }
 
   .info {
@@ -57,10 +58,12 @@ body {
   .author h6 {
       font-size: 12px;
       margin-top: 3px;
+      color: #8A8A8A;
   }
 
   .author p {
       font-size: small;
+      color: #BEBEBE;
   }
 
   .bookmark img#bookmark {
